--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Python App Build Per Commit
 
 on:
   push:
@@ -10,8 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  linux-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +28,7 @@ jobs:
       run: |
         cd buildscripts
         ./PyInstallerBuild.sh
+        ls
     - name: Upload linux artifact
       uses: actions/upload-artifact@v2
       with:
